src/test/ui/pattern/bindings-after-at/borrowck-move-and-move.stderr
warning: the feature `bindings_after_at` is incomplete and may cause the compiler to crash
  --> $DIR/borrowck-move-and-move.rs:3:12
   |
LL | #![feature(bindings_after_at)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0007]: cannot bind by-move with sub-bindings
  --> $DIR/borrowck-move-and-move.rs:9:9
   |
LL |     let a @ b = U;
   |         ^^^^^ binds an already bound by-move value by moving it

error[E0007]: cannot bind by-move with sub-bindings
  --> $DIR/borrowck-move-and-move.rs:13:9
   |
LL |     let a @ (b, c) = (U, U);
   |         ^^^^^^^^^^ binds an already bound by-move value by moving it

error[E0007]: cannot bind by-move with sub-bindings
  --> $DIR/borrowck-move-and-move.rs:18:9
   |
LL |         a @ Ok(b) | a @ Err(b) => {}
   |         ^^^^^^^^^ binds an already bound by-move value by moving it

error[E0007]: cannot bind by-move with sub-bindings
  --> $DIR/borrowck-move-and-move.rs:18:21
   |
LL |         a @ Ok(b) | a @ Err(b) => {}
   |                     ^^^^^^^^^^ binds an already bound by-move value by moving it

error[E0382]: use of moved value
  --> $DIR/borrowck-move-and-move.rs:9:13
   |
LL |     let a @ b = U;
   |         ----^   - move occurs because value has type `main::U`, which does not implement the `Copy` trait
   |         |   |
   |         |   value used here after move
   |         value moved here

error[E0382]: use of moved value
  --> $DIR/borrowck-move-and-move.rs:13:17
   |
LL |     let a @ (b, c) = (U, U);
   |         --------^-   ------ move occurs because value has type `(main::U, main::U)`, which does not implement the `Copy` trait
   |         |       |
   |         |       value used here after move
   |         value moved here

error[E0382]: use of moved value
  --> $DIR/borrowck-move-and-move.rs:18:16
   |
LL |     match Ok(U) {
   |           ----- move occurs because value has type `std::result::Result<main::U, main::U>`, which does not implement the `Copy` trait
LL |         a @ Ok(b) | a @ Err(b) => {}
   |         -------^-
   |         |      |
   |         |      value used here after move
   |         value moved here

error[E0382]: use of moved value
  --> $DIR/borrowck-move-and-move.rs:18:29
   |
LL |     match Ok(U) {
   |           ----- move occurs because value has type `std::result::Result<main::U, main::U>`, which does not implement the `Copy` trait
LL |         a @ Ok(b) | a @ Err(b) => {}
   |                     --------^-
   |                     |       |
   |                     |       value used here after move
   |                     value moved here

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0007, E0382.
For more information about an error, try `rustc --explain E0007`.
